Add group by dropdown to analitycs filter

--- a/src/app/reports/transactions-report/transactions-report.component.html
+++ b/src/app/reports/transactions-report/transactions-report.component.html
@@ -4,7 +4,9 @@
     [filterTerms]="filterTerms"
     [refreshText]="'Refresh Report'"
     [shareUrl]="'transactions'"
+    [groupByEnabled]="true"
     (dateChanged)="dateChanged($event)"
+    (groupByChanged)="groupByChanged($event)"
     (filterTermAdded)="addFilter($event)"
     (filterTermRemoved)="removeFilter($event)"
     (resetFilters)="reset()"
