Add transactions summary chart to transactions report

--- a/src/app/pages/dashboard-page/dashboard.component.html
+++ b/src/app/pages/dashboard-page/dashboard.component.html
@@ -116,7 +116,7 @@
 
     <events-summary [date]="date"></events-summary>
 
-    <transaction-summary [date]="date" [filters]="immutableFilterTerms"></transaction-summary>
+    <transaction-summary-chart [date]="date" [filters]="immutableFilterTerms"></transaction-summary-chart>
 
     <div class="dashboard__boxes">
       <movers-card [date]="date"></movers-card>
