--- a/src/app/pages/dashboard-page/events-by/events-by.component.html
+++ b/src/app/pages/dashboard-page/events-by/events-by.component.html
@@ -1,7 +1,7 @@
 <div inViewport (inside)="fetch()" class="dashboard__table-chart">
   <div class="dashboard__table-chart__title">
-    <div class="dashboard__table-chart__title__main">{{title}}</div>
-    <div class="dashboard__table-chart__title__sub">{{subtitle}}</div>
+    <div class="dashboard__table-chart__title__main">Events by Affiliate</div>
+    <div class="dashboard__table-chart__title__sub">Events from the top Affiliates</div>
     <md-icon>more_vert</md-icon>
   </div>
 
