--- a/src/app/reports/transactions-report/transactions-report.component.html
+++ b/src/app/reports/transactions-report/transactions-report.component.html
@@ -15,6 +15,10 @@
   </advanced-filter>
 </div>
 
+<div class="chart-container">
+  <transaction-summary-chart [date]="dateMap" [filters]="immutableFilterTerms"></transaction-summary-chart>
+</div>
+
 <report-table
   [title]="'Transactions'"
   [data]="reportsToDisplay"
