--- a/src/app/reports/transactions-report/transactions-report.component.html
+++ b/src/app/reports/transactions-report/transactions-report.component.html
@@ -3,7 +3,7 @@
     [date]="dateMap"
     [filterTerms]="filterTerms"
     [refreshText]="'Refresh Report'"
-    [shareUrl]="'transactions'"
+    [shareUrl]="shareUrl"
     [groupByEnabled]="true"
     (dateChanged)="dateChanged($event)"
     (groupByChanged)="groupByChanged($event)"
