--- a/src/app/navigation/notifications-quick/notifications-quick.component.html
+++ b/src/app/navigation/notifications-quick/notifications-quick.component.html
@@ -18,7 +18,7 @@
         <div *ngFor="let notification of notificationsByDate.nots">
           <div class="notifications-list__content__notification" (click)="readNotification(notification)">
             <div class="notifications-list__content__notification__image"><img src="assets/images/alert-icon.svg" alt=""></div>
-            <div class="notifications-list__content__notification__message">{{notification.message}}</div>
+            <div class="notifications-list__content__notification__message">{{notification.body}}</div>
             <div class="notifications-list__content__notification__date">
               <span>{{notification.createdAt.format('MMMM D')}}</span>
               <div *ngIf="!notification.readAt"></div>
