--- a/src/app/reports/transactions-report/transactions-report.component.html
+++ b/src/app/reports/transactions-report/transactions-report.component.html
@@ -20,7 +20,7 @@
 </div>
 
 <report-table
-  [title]="'Transactions'"
+  [title]="'Transaction Details'"
   [data]="reportsToDisplay"
   [columnParams]="columnParams"
   [limit]="limit"
