--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,7 @@
 @import "assets/scss/_transaction-view.scss";
 @import "assets/scss/_profile.scss";
 @import "assets/scss/_advanced-filter.scss";
+@import "assets/scss/_reports-table.scss";
 
 /***************
   HTML Styles
