--- a/src/assets/scss/_search.scss
+++ b/src/assets/scss/_search.scss
@@ -220,15 +220,14 @@ $border-color: rgba(0, 0, 0, 0.2);
 
     table-pagination > div {
       display: inline-block;
-      float: right;
-      margin-top: 0;
-      margin-right: 0;
+      margin: 0 10px;
       font-size: 12px;
       color: $main-color;
     }
 
     .search__content__pagination--bottom > div {
       margin: 0 20px 20px 0;
+      float: right;
     }
 
     &__no-results {
