--- a/src/app/navigation/topnav/topnav.component.html
+++ b/src/app/navigation/topnav/topnav.component.html
@@ -1,5 +1,5 @@
 <!--<md-progress-bar mode="indeterminate" *ngIf="_isLoadingRoute"></md-progress-bar>-->
-<md-toolbar>
+<md-toolbar class="topnav">
   <button md-icon-button (click)="toggleSidenav()" id="menu-toggler">
     <img src="/assets/images/ic_sort.svg">
   </button>
