--- a/src/app/pages/dashboard-page/transaction-overview/transaction-overview-card/transaction-overview-card.component.scss
+++ b/src/app/pages/dashboard-page/transaction-overview/transaction-overview-card/transaction-overview-card.component.scss
@@ -12,12 +12,12 @@
   }
 
   &__count {
-    font-size: 24px;
+    font-size: 34px;
   }
 
   &__title {
     font-size: 16px;
-    margin-top: 5px 0;
+    margin-top: 5px;
   }
 
   &__amount {
