--- a/src/assets/scss/_navigation.scss
+++ b/src/assets/scss/_navigation.scss
@@ -186,6 +186,7 @@ md-nav-list.side-navigation {
 .side-navigation {
   display: table;
   height: calc(100% - 70px);
+  font-family: Montserrat, sans-serif;
 
   &__version {
     display: table-row;
@@ -249,6 +250,7 @@ header {
     background-size: 827px $topnav-height !important;
     padding: 0 !important;
     height: $topnav-height;
+    font-family: Montserrat, sans-serif;
 
     md-toolbar-row {
       height: $topnav-height;
@@ -390,6 +392,7 @@ header {
 
   &__text {
     width: 90px;
-    font-size: 0.8em;
+    font-size: 14px;
+    font-family: Montserrat, sans-serif;
   }
 }
