--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -9,7 +9,7 @@
         <img src="{{ user.picture }}" alt="">
       </div>
       <div class="entity-view__info__data">
-        <div class="entity-view__info__data__date">Created: {{user.createdAt.format('MM/DD/YYYY')}}</div>
+        <div class="entity-view__info__data__date">Created: {{user.createdAt | formatDateTime}}</div>
         <div class="entity-view__info__data__name">{{user.name}}</div>
         <div class="entity-view__info__data__other">
           <span><md-icon>phone</md-icon>{{getPhoneNumber()}}</span>
