Pointer for table rows is cursor

--- a/src/assets/scss/_entity-index.scss
+++ b/src/assets/scss/_entity-index.scss
@@ -98,6 +98,7 @@ $title-color: #979797;
 
       tr td {
         padding: 10px 5px;
+        cursor: pointer;
 
         &:first-child {
           padding-left: 45px;
