--- a/src/assets/scss/_search.scss
+++ b/src/assets/scss/_search.scss
@@ -347,7 +347,7 @@ $border-color: rgba(0, 0, 0, 0.2);
         border-bottom: 1px solid rgba(0, 0, 0, 0.1);
         padding: 15px 30px;
         font-size: 14px;
-        cursor: default;
+        cursor: pointer;
 
         img {
           width: 40px;
