--- a/src/assets/scss/_reports-table.scss
+++ b/src/assets/scss/_reports-table.scss
@@ -61,6 +61,7 @@
 
         td {
           font-size: 12px;
+          cursor: pointer;
 
           &:first-of-type {
             padding-left: 15px;
