--- a/src/app/pages/dashboard-page/funnel-graph/funnel-graph.component.html
+++ b/src/app/pages/dashboard-page/funnel-graph/funnel-graph.component.html
@@ -12,41 +12,41 @@
     <thead>
       <tr>
         <th>Events</th>
-        <th>Count</th>
-        <th>Percentage</th>
-        <th>Relative Percentage</th>
+        <th class="cell--align-right">Count</th>
+        <th class="cell--align-right">Percentage</th>
+        <th class="cell--align-right">Relative Percentage</th>
       </tr>
     </thead>
 
     <tbody *ngIf="funnel">
       <tr>
         <td><div [style.background]="colors[0]" class="color-indicator"></div>Clicks</td>
-        <td>{{funnel.click.count}}</td>
-        <td>{{funnel.click.percentage || '-'}}</td>
-        <td>{{funnel.click.relativePercentage || '-'}}</td>
+        <td class="cell--align-right">{{funnel.click.count}}</td>
+        <td class="cell--align-right">{{funnel.click.percentage || '-'}}%</td>
+        <td class="cell--align-right">{{funnel.click.relativePercentage || '-'}}%</td>
       </tr>
       <tr>
         <td><div [style.background]="colors[1]" class="color-indicator"></div>Leads</td>
-        <td>{{funnel.lead.count}}</td>
-        <td>{{funnel.lead.percentage || '-'}}</td>
-        <td>{{funnel.lead.relativePercentage || '-'}}</td>
+        <td class="cell--align-right">{{funnel.lead.count}}</td>
+        <td class="cell--align-right">{{funnel.lead.percentage || '-'}}%</td>
+        <td class="cell--align-right">{{funnel.lead.relativePercentage || '-'}}%</td>
       </tr>
       <tr>
         <td><div [style.background]="colors[2]" class="color-indicator"></div>Mains</td>
-        <td>{{funnel.main.count}}</td>
-        <td>{{funnel.main.percentage || '-'}}</td>
-        <td>{{funnel.main.relativePercentage || '-'}}</td>
+        <td class="cell--align-right">{{funnel.main.count}}</td>
+        <td class="cell--align-right">{{funnel.main.percentage || '-'}}%</td>
+        <td class="cell--align-right">{{funnel.main.relativePercentage || '-'}}%</td>
       </tr><tr>
         <td><div [style.background]="colors[3]" class="color-indicator"></div>Upsells</td>
-        <td>{{funnel.upsell.count}}</td>
-        <td>{{funnel.upsell.percentage || '-'}}</td>
-        <td>{{funnel.upsell.relativePercentage || '-'}}</td>
+        <td class="cell--align-right">{{funnel.upsell.count}}</td>
+        <td class="cell--align-right">{{funnel.upsell.percentage || '-'}}%</td>
+        <td class="cell--align-right">{{funnel.upsell.relativePercentage || '-'}}%</td>
       </tr>
       <tr>
         <td><div [style.background]="colors[4]" class="color-indicator"></div>Confirmations</td>
-        <td>{{funnel.confirm.count}}</td>
-        <td>{{funnel.confirm.percentage || '-'}}</td>
-        <td>{{funnel.confirm.relativePercentage || '-'}}</td>
+        <td class="cell--align-right">{{funnel.confirm.count}}</td>
+        <td class="cell--align-right">{{funnel.confirm.percentage || '-'}}%</td>
+        <td class="cell--align-right">{{funnel.confirm.relativePercentage || '-'}}%</td>
       </tr>
     </tbody>
   </table>
