--- a/src/assets/scss/_tables.scss
+++ b/src/assets/scss/_tables.scss
@@ -132,3 +132,8 @@ td,th {
     border-right: 1px solid #d0d0d0
   }
 }
+
+.cell--align-right {
+  padding-right: 20px !important;
+  text-align: right;
+}
