--- a/src/app/reports/components/report-table/report-table.component.html
+++ b/src/app/reports/components/report-table/report-table.component.html
@@ -19,7 +19,7 @@
     <table class="highlight">
       <thead>
         <tr>
-          <th *ngFor="let params of columnParams" (click)="setSortParams(params)">
+          <th *ngFor="let params of columnParams" (click)="setSortParams(params)" [class.cell--align-right]="params.align === 'right'">
             {{params.label}}
             <ng-container *ngIf="params.sortApplied">
               <md-icon *ngIf="params.sortOrder === 'asc'; else downArrow;">keyboard_arrow_down</md-icon>
@@ -31,7 +31,7 @@
 
       <tbody>
         <tr *ngFor="let d of data | filterEntities: filterString | sortEntities: sortParams.mappingFunction: sortParams.sortOrder" (click)="selected.emit(d)">
-          <td *ngFor="let params of columnParams">{{params.mappingFunction(d)}}</td>
+          <td *ngFor="let params of columnParams" [class.cell--align-right]="params.align === 'right'">{{params.mappingFunction(d)}}</td>
         </tr>
       </tbody>
     </table>
