--- a/src/app/pages/search-page/result-item/result-item.component.html
+++ b/src/app/pages/search-page/result-item/result-item.component.html
@@ -1,4 +1,4 @@
-<div class="search__content__results__item">
+<div class="search__content__results__item" *ngIf="listMode; else table">
   <div class="search__content__results__item__image">
     <img src={{imageSrc()}}>
   </div>
@@ -25,3 +25,31 @@
     </div>
   </div>
 </div>
+
+<ng-template #table>
+  <div class="search__content__results--table" (click)="showDetailsClicked()">
+    <img src="{{imageSrc()}}">
+    <div class="search__content__results--table__items">
+      <div class="search__content__results--table__item" [innerHTML]="title | highlight: queryString"></div>
+      <div class="search__content__results--table__item"> {{fields.created_at | formatDateTime}} </div>
+
+      <ng-container *ngIf="entityType === 'customer'">
+        <div class="search__content__results--table__item"> {{fields.city}} </div>
+      </ng-container>
+
+      <ng-container *ngIf="entityType === 'product'">
+        <div class="search__content__results--table__item"> {{fields.sku}} </div>
+      </ng-container>
+
+      <ng-container *ngIf="entityType === 'campaign'">
+        <div class="search__content__results--table__item"> </div>
+      </ng-container>
+
+      <ng-container *ngIf="entityType === 'transaction'">
+        <div class="search__content__results--table__item"> {{formatCurrency(fields.amount)}} </div>
+      </ng-container>
+
+      <md-icon class="search__content__results--table__action"> more_vert </md-icon>
+    </div>
+  </div>
+</ng-template>
