--- a/src/assets/scss/_advanced-search.scss
+++ b/src/assets/scss/_advanced-search.scss
@@ -1,7 +1,7 @@
 .advanced-search {
   position: relative;
   overflow: hidden;
-  height: 500px;
+  height: 370px;
   box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
   transition: height 0.75s cubic-bezier(0.35, 0, 0.25, 1);
 
@@ -36,9 +36,10 @@
   }
 
   &__content {
-    border-top: 2px solid rgba(0, 0, 0, 0.12);
+    border-top: 1px solid rgba(0, 0, 0, 0.12);
     box-sizing: border-box;
     width: 100%;
+    padding-top: 50px;
     background-color: white;
 
     &__title {
@@ -49,7 +50,6 @@
       position: relative;
       display: flex;
       padding: 10px 40px 50px 40px;
-      box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
 
       &__column {
         display: flex;
@@ -59,7 +59,7 @@
       }
 
       &__input {
-        margin-bottom: 15px;
+        margin-bottom: 4px;
         width: 100%;
         max-width: 300px;
         font-size: 14px;
